vpc.tf
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "vpc-${var.env}"
  }
  tags_all = {
    Name = "vpc-${var.env}"
  }
}
